welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
move(nbPas: Int,versLAvant: Boolean) {
  var x=0
  if (versLAvant) {
    for(x<-0 to nbPas: Int) {
    	avance()
    }
  } else {
      for(x<-0 to nbPas: Int) {
        recule()
      }
  }
}